// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

option go_package = "github.com/IBM-Blockchain/bcdb-server/pkg/types";

package types;

import "configuration.proto";
import "block_and_transaction.proto";

message ResponseHeader {
  string node_id = 1;
}

// GetDBStatus
message GetDBStatusResponseEnvelope {
  GetDBStatusResponse response = 1;
  bytes signature = 2;
}

message GetDBStatusResponse {
  ResponseHeader header = 1;
  bool exist = 2;
}

// GetData
message GetDataResponseEnvelope {
  GetDataResponse response = 1;
  bytes signature = 2;
}

message GetDataResponse {
  ResponseHeader header = 1;
  bytes value = 2;
  Metadata metadata = 3;
}

// GetUser
message GetUserResponseEnvelope {
  GetUserResponse response = 1;
  bytes signature = 2;
}

message GetUserResponse {
  ResponseHeader header = 1;
  User user = 2;
  Metadata metadata = 3;
}

// GetConfig
message GetConfigResponseEnvelope {
  GetConfigResponse response = 1;
  bytes signature = 2;
}

message GetConfigResponse {
  ResponseHeader header = 1;
  ClusterConfig config = 2;
  Metadata metadata = 3;
}

// GetNodeConfig
message GetNodeConfigResponseEnvelope {
  GetNodeConfigResponse response = 1;
  bytes signature = 2;
}

message GetNodeConfigResponse {
  ResponseHeader header = 1;
  NodeConfig node_config = 2;
}

//========= Part II Provenance API responses

// GetBlock
message GetBlockResponseEnvelope {
  GetBlockResponse response = 1;
  bytes signature = 2;
}

message GetBlockResponse {
  ResponseHeader header = 1;
  BlockHeader block_header = 2;
}

// GetLedgerPath
message GetLedgerPathResponseEnvelope {
  GetLedgerPathResponse response = 1;
  bytes signature = 2;
}

message GetLedgerPathResponse {
  ResponseHeader header = 1;
  repeated BlockHeader block_headers = 2;
}

// GetTxProof
message GetTxProofResponseEnvelope {
  GetTxProofResponse response = 1;
  bytes signature = 2;
}

message GetTxProofResponse {
  ResponseHeader header = 1;
  repeated bytes hashes = 2;
}

// GetDataProof
message GetDataProofResponseEnvelope {
  GetDataProofResponse response = 1;
  bytes signature = 2;
}

message GetDataProofResponse {
  ResponseHeader header = 1;
  repeated MPTrieProofElement path = 2;
}

message MPTrieProofElement {
  repeated bytes hashes = 1;
}

// GetHistoricalData
message GetHistoricalDataResponseEnvelope {
  GetHistoricalDataResponse response = 1;
  bytes signature = 2;
}


message GetHistoricalDataResponse {
  ResponseHeader header = 1;
  repeated ValueWithMetadata values = 2;
}

// GetDataReaders
message GetDataReadersResponseEnvelope {
  GetDataReadersResponse response = 1;
  bytes signature = 2;
}

message GetDataReadersResponse {
  ResponseHeader header = 1;
  map<string, uint32> read_by = 2;
}

// GetDataWriters
message GetDataWritersResponseEnvelope {
  GetDataWritersResponse response = 1;
  bytes signature = 2;
}

message GetDataWritersResponse {
  ResponseHeader header = 1;
  map<string, uint32> written_by = 2;
}

// GetDataProvenance
message GetDataProvenanceResponseEnvelope {
  GetDataProvenanceResponse response = 1;
  bytes signature = 2;
}

message GetDataProvenanceResponse {
  ResponseHeader header = 1;
  repeated KVWithMetadata KVs = 2;
}

// GetTxIDsSubmittedBy
message GetTxIDsSubmittedByResponseEnvelope {
  GetTxIDsSubmittedByResponse response = 1;
  bytes signature = 2;
}

message GetTxIDsSubmittedByResponse {
  ResponseHeader header = 1;
  repeated string txIDs = 2;
}

message TxReceiptResponseEnvelope {
  TxReceiptResponse response = 1;
  bytes signature = 2;
}

message TxReceiptResponse {
  ResponseHeader header = 1;
  TxReceipt receipt = 2;
}

message GetTxResponseEnvelope {
  TxReceiptResponse response = 1;
  bytes signature = 2;
}

message GetTxResponse {
  ResponseHeader header = 1;
  oneof Tx {
    DataTxEnvelope data_tx = 2;
    ConfigTxEnvelope config_tx = 3;
    UserAdministrationTxEnvelope user_tx = 4;
    DataTxEnvelope database_tx = 5;
  }
}

message GetLedgerHeightResponseEnvelope {
  GetLedgerHeightResponse response = 1;
  bytes signature = 2;
}

message GetLedgerHeightResponse {
  ResponseHeader header = 1;
  uint64 ledger_height = 2;
}
